--- a/rassp-test.ipynb
+++ b/rassp-test.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b960323b-8f0b-4112-848b-12b17deb6ab8",
+   "execution_count": 1,
+   "id": "afc32db1",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "threads=16\n",
+    "threads=8\n",
     "import os\n",
     "os.environ['OMP_NUM_THREADS']=str(threads)\n",
     "import torch"
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bac6a059-bec6-4824-a7fa-66976b35abf0",
+   "execution_count": 2,
+   "id": "7d49d3eb",
    "metadata": {
     "tags": []
    },
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "147df318-78bc-4372-b9bb-c386173bef68",
+   "id": "2f742dc4",
    "metadata": {
     "tags": []
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6d8f738-67ef-4d87-977c-cc5343d8b7d8",
+   "id": "e23cb82e",
    "metadata": {
     "tags": []
    },
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dea2721-d7a3-40c0-8753-cf048e5d7104",
+   "id": "376d8935",
    "metadata": {
     "tags": []
    },
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9cb4e83-5162-45ce-aab0-00d6646bb03d",
+   "id": "83274c14",
    "metadata": {
     "tags": []
    },
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8cf215f-ee7e-4096-a464-56b3b677ce07",
+   "id": "b750b9df",
    "metadata": {
     "tags": []
    },
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a061a2e-133c-49f2-b654-c6e58bbcb122",
+   "id": "3cf98b93",
    "metadata": {
     "tags": []
    },
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0459504-fc74-4678-9df2-0ed8c51a9ecd",
+   "id": "c7620d7b",
    "metadata": {
     "tags": []
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28389677-597b-4132-a57a-5d2ea43189f4",
+   "id": "b1e6b0bb",
    "metadata": {},
    "source": [
     "### TODO \n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87250934-56d7-46cc-9d28-76603d1eff2d",
+   "id": "71aa4037",
    "metadata": {
     "tags": []
    },
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f9852d2-7aa0-49fa-bd1f-352509e04834",
+   "id": "3371ed03",
    "metadata": {
     "tags": []
    },
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55a4e443-9e7f-46b5-be42-c1acd89ee525",
+   "id": "a13f60a0",
    "metadata": {
     "tags": []
    },
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1e42f7a-48b6-4200-bb8a-7016f739792e",
+   "id": "9498d60c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a55773f-cd24-4cbd-a15a-8f449c90e17d",
+   "id": "8ab1fabd",
    "metadata": {
     "tags": []
    },
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "980c9306-f3a5-4380-b1b4-0cfc27905b70",
+   "id": "51f8b96d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c6c9f6e-2937-478b-85e2-5f2be43dbeec",
+   "id": "c9a4e22d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fdc0a5e-672e-4abf-baea-1875e597fdd8",
+   "id": "45db3991",
    "metadata": {
     "tags": []
    },
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b00e48-39ea-4ef9-8a4e-64875923cd8c",
+   "id": "ebdc4406",
    "metadata": {
     "tags": []
    },
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f383ac7c-0ca6-4814-9334-64a545ef2d20",
+   "id": "5fbad88c",
    "metadata": {
     "tags": []
    },
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8d47077-f69d-4a52-81ce-692163935000",
+   "id": "bdfd9753",
    "metadata": {
     "tags": []
    },
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee4a514-2260-436f-8027-b5cd92497c5d",
+   "id": "2887adfc",
    "metadata": {
     "tags": []
    },
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d847e967-594a-4079-9081-d8f3705f075d",
+   "id": "34af89b2",
    "metadata": {
     "tags": []
    },
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a0cb946-58f7-45f6-9183-13b8fb3705b5",
+   "id": "fd055e11",
    "metadata": {
     "tags": []
    },
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d65781ea-9795-4324-a52a-664258e9aff7",
+   "id": "c82b4d6f",
    "metadata": {
     "tags": []
    },
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "786c71a8-705e-4c02-9ef3-63f1191e0932",
+   "id": "5e4f754b",
    "metadata": {
     "tags": []
    },
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4299d0e5-802c-4d1b-8a3b-ed9fd1ab8e9c",
+   "id": "0817bc93",
    "metadata": {
     "tags": []
    },
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8336ae3-fe9b-4a4a-99a9-25b79cbdc852",
+   "id": "203b8a36",
    "metadata": {
     "tags": []
    },
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4712be15-8611-4150-98a6-ce54d20becae",
+   "id": "348116d2",
    "metadata": {
     "tags": []
    },
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b676167-a9be-4d85-8430-43dc38ec5172",
+   "id": "e9715a5e",
    "metadata": {
     "tags": []
    },
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5933122b-9591-4a4b-8aed-2bd667cf546a",
+   "id": "1d09b01d",
    "metadata": {
     "tags": []
    },
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "267fa070-3050-45e7-8a39-1a1b9a45e417",
+   "id": "ba037bef",
    "metadata": {
     "tags": []
    },
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d02d469-97dc-4cac-a90d-681876148e31",
+   "id": "71a0abf6",
    "metadata": {
     "tags": []
    },
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d19b389f-f87f-4f91-b35b-729fdfa4c648",
+   "id": "8d77b85c",
    "metadata": {
     "tags": []
    },
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34764a10-8799-46bb-ae3f-0e79fc6a72db",
+   "id": "a10ec59e",
    "metadata": {
     "tags": []
    },
@@ -571,8 +571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8d29b970-4dbf-4584-871e-43b8b322b3c3",
+   "execution_count": 4,
+   "id": "f4c6d1cc",
    "metadata": {
     "tags": []
    },
@@ -583,12 +583,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f62ee9f4-b186-47c9-99f2-3a4389aec70f",
+   "execution_count": 7,
+   "id": "2c7f3ba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "td[:200].to_parquet('fake_train.pq')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b21d3f9f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([array([ 1.  , 20.98]), array([  2., 999.])], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "td.iloc[0].spect"
    ]
@@ -596,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de344886-900a-4203-9105-759476ac0c5e",
+   "id": "70a7a80e",
    "metadata": {
     "tags": []
    },
@@ -609,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "212a3d26-da5b-46e1-a41d-1936f5d19cf9",
+   "id": "986e8cdb",
    "metadata": {
     "tags": []
    },
@@ -622,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef603beb-50f2-47d2-8161-f791c87d5704",
+   "id": "50a3ae49",
    "metadata": {
     "tags": []
    },
@@ -634,10 +655,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40419726-6c5e-4a4a-8e92-b40e01740cd5",
+   "id": "a81f6099",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "sys.path.append('./rassp-public/rassp')\n",
     "from forward_train import train"
    ]
@@ -645,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83b3961b-e7e2-4b94-bdae-06b643a14afe",
+   "id": "96716ecf",
    "metadata": {
     "tags": []
    },
@@ -659,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "961123f2-3a8d-4319-b886-58af93f96afc",
+   "id": "a936f49c",
    "metadata": {
     "tags": []
    },
@@ -671,7 +693,10 @@
     "exp_config['epoch_size'] = 4096\n",
     "exp_config['batch_size'] = 4\n",
     "exp_config['automatic_mixed_precision'] = False # broken\n",
-    "exp_config['featurize_config']['explicit_formulae_config']['max_formulae'] = 27000 # XXX\n",
+    "exp_config['featurize_config']['explicit_formulae_config']['max_formulae'] = 80000 # XXX\n",
+    "exp_config['featurize_config']['element_oh']=list(valid_atoms)\n",
+    "exp_config['featurize_config']['explicit_formulae_config']['formula_possible_atomicno'] = list(valid_atoms)\n",
+    "\n",
     "exp_config['exp_data']['data'][0]['db_filename'] = 'train.pq'\n",
     "exp_config['exp_data']['data'][1]['db_filename'] = 'test.pq'\n",
     "\n",
@@ -682,15 +707,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3627f9b5-1e47-47e3-ba03-7617f56f77eb",
+   "id": "c7917b11",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"max_split_size_mb:512\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bef65dd-4c4b-41dc-97a7-3026777a10bc",
+   "id": "0bd7dc7f",
    "metadata": {
     "tags": []
    },
@@ -702,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce3fe22c-1253-42b5-87c7-f5ca9f9c025c",
+   "id": "c00d5641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1494c6f1-7058-496a-b15b-5f885b0a3b7b",
+   "id": "fe1bb807",
    "metadata": {
     "tags": []
    },
@@ -726,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9828853b-eda1-4b0a-bd26-cbc196042b64",
+   "id": "ea6c0597",
    "metadata": {
     "tags": []
    },
@@ -738,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6472114-b836-42f6-a34b-af7d01c725e3",
+   "id": "4f71a94f",
    "metadata": {
     "tags": []
    },
@@ -750,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e792ca5a-c0fc-4446-82be-1f81bcca6314",
+   "id": "1fb411eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10875c4d-3aff-43b0-bddd-e5352be863d7",
+   "id": "1bca4ee9",
    "metadata": {
     "tags": []
    },
@@ -772,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49856b1f-0c9b-46ab-af05-adfea3d39002",
+   "id": "381c4ffb",
    "metadata": {
     "tags": []
    },
@@ -785,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "980fe05e-45b9-4d41-88fa-00b890b437cb",
+   "id": "9524829d",
    "metadata": {
     "tags": []
    },
@@ -797,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5a52358-e426-498b-a76d-8f9fbaf89fbd",
+   "id": "ecd618ca",
    "metadata": {
     "tags": []
    },
@@ -813,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9721c3f9-258d-4758-8356-25f8c576fb78",
+   "id": "01158eb1",
    "metadata": {
     "tags": []
    },
@@ -826,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9777fd89-36b3-49a6-9972-c35114950319",
+   "id": "a410ecb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,10 +864,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a67d61e6-1b9b-44f1-88a4-187d57144e4b",
+   "id": "53785d92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rdkit import Chem\n",
+    "len(Chem.AddHs(Chem.MolFromSmiles('CC(C)(C)N(CC(COC1=C(C=CC(=C1)Cl)Cl)OC(=O)C(F)(F)F)C(=O)C(F)(F)F')).GetAtoms())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73f898f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_atoms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0a1bec8",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fe8c5eb-6368-4a84-9169-25a930e9eefc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matchms.importing import load_from_msp\n",
+    "ni = load_from_msp('../train-new.msp',"
+   ]
   }
  ],
  "metadata": {
@@ -858,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
