--- a/clean_paper/notebooks/5_model_evaluation.ipynb
+++ b/clean_paper/notebooks/5_model_evaluation.ipynb
@@ -118,15 +118,15 @@
     "                                                  # the model (probsort)\n",
     "        mean_fpsd_score_similsort: '0.14'         # mean difference between the best candidates of db and\n",
     "                                                  # the model (similsort)\n",
-    "        percentage_of_BART_wins_probsort: '0.63'  # percentage of queries where the model's best \n",
+    "        rate_of_BART_wins_probsort: '0.63'  # percentage of queries where the model's best \n",
     "                                                  # candidate is better than the best db candidate \n",
     "                                                  # (probsort)\n",
-    "        percentage_of_BART_wins_similsort: '0.84' # percentage of queries where the model's best \n",
+    "        rate_of_BART_wins_similsort: '0.84' # percentage of queries where the model's best \n",
     "                                                  # candidate is better than the best db candidate \n",
     "                                                  # (similsort)\n",
-    "        percentage_of_ties_probsort: '0.14'       # percentage of queries where the model's best \n",
+    "        rate_of_ties_probsort: '0.14'       # percentage of queries where the model's best \n",
     "                                                  # candidate is equal to the best db candidate (probsort)\n",
-    "        percentage_of_ties_similsort: '0.06'      # percentage of queries where the model's best \n",
+    "        rate_of_ties_similsort: '0.06'      # percentage of queries where the model's best \n",
     "                                                  # candidate is equal to the best db candidate (similsort)\n",
     "        ties:                                     # detailed statistics on ties\n",
     "            mean_tie_simils_probsort: '0.38'\n",
@@ -135,8 +135,8 @@
     "            num_of_ties_simils_equal_to_1_probsort: '4'  # number of ties with similarity equal to 1 (probsort)\n",
     "            num_of_ties_simils_equal_to_1_similsort: '6' # number of ties with similarity equal to 1 (similsort)\n",
     "            num_of_ties_similsort: '16'\n",
-    "            percentage_of_ties_simils_equal_to_1_probsort: '0.11'\n",
-    "            percentage_of_ties_simils_equal_to_1_similsort: '0.37'\n",
+    "            rate_of_ties_simils_equal_to_1_probsort: '0.11'\n",
+    "            rate_of_ties_simils_equal_to_1_similsort: '0.37'\n",
     "    eval_config:                                 # log of configuration used for evaluation\n",
     "        do_db_search: true\n",
     "        filtering_args:\n",
@@ -155,10 +155,10 @@
     "        num_at_least_one_correct_formula: '38'      # at least one correct formula was generated for the query\n",
     "        num_correct_formulas_at_best_prob: '24'     # correct formula was returned as the best candidate (probsort)\n",
     "        num_correct_formulas_at_best_simil: '29'    # correct formula was returned as the best candidate (similsort)\n",
-    "        percentage_of_all_correct_formulas: '0.06'        \n",
-    "        percentage_of_at_least_one_correct_formula: '0.15'\n",
-    "        percentage_of_correct_formulas_at_best_prob: '0.09'\n",
-    "        percentage_of_correct_formulas_at_best_simil: '0.11'\n",
+    "        rate_of_all_correct_formulas: '0.06'        \n",
+    "        rate_of_at_least_one_correct_formula: '0.15'\n",
+    "        rate_of_correct_formulas_at_best_prob: '0.09'\n",
+    "        rate_of_correct_formulas_at_best_simil: '0.11'\n",
     "    hit_at_k_prob: '[(1, 0.02), (2, 0.03), (3, 0.04),\n",
     "        (4, 0.06), (5, 0.08)]'                      # percentage of correct formulas returned in top k \n",
     "                                                    # candidates (probsort) \n",
@@ -170,8 +170,8 @@
     "    precise_preds_stats:      # statistics on precise returned best candidates (exactly the same canonical SMILES)\n",
     "        num_precise_preds_probsort: '4'\n",
     "        num_precise_preds_similsort: '20'\n",
-    "        percentage_of_precise_preds_probsort: '0.01'\n",
-    "        percentage_of_precise_preds_similsort: '0.08'\n",
+    "        rate_of_precise_preds_probsort: '0.01'\n",
+    "        rate_of_precise_preds_similsort: '0.08'\n",
     "    simil_1_hits:                              # statistics on returned best candidates with similarity 1\n",
     "        counter_multiple_hits: dict_items([(3, 2), (1, 13), (2, 5)]) # monitors situations where more than one \n",
     "                                                                     # candidate has prob equal to 1. This can \n",
@@ -182,15 +182,15 @@
     "        num_fp_simil_fail_prob: '1'                                  # number of queries where the best candidate \n",
     "                                                                     # has similarity 1 but is not the correct one\n",
     "        num_fp_simil_fail_simil: '0'\n",
-    "        percentage_of_1_hits_as_first_probsort: '0.02'\n",
-    "        percentage_of_1_hits_as_first_similsort: '0.08'\n",
+    "        rate_of_1_hits_as_first_probsort: '0.02'\n",
+    "        rate_of_1_hits_as_first_similsort: '0.08'\n",
     "    start_time_utc: 01/09/2024 11:19:01\n",
     "    threshold_stats:            # statistics using a threshold (not backed by any theoretical\n",
     "                                # or empirical reasoning, just to have a clue about \"relatively good\" candidates)\n",
     "        num_better_than_threshold_probsort: '7'\n",
     "        num_better_than_threshold_similsort: '22'\n",
-    "        percentage_of_better_than_threshold_probsort: '0.02'\n",
-    "        percentage_of_better_than_threshold_similsort: '0.09'\n",
+    "        rate_of_better_than_threshold_probsort: '0.02'\n",
+    "        rate_of_better_than_threshold_similsort: '0.09'\n",
     "        threshold: '0.85'\n",
     "    topk_probsort: '[0.28, 0.27, 0.27, 0.26, 0.26, 0.25, 0.24,\n",
     "        0.23, 0.23, 0.22]'          # mean similarities on k-th position (probsort) \n",
