new results and little things

--- a/data/extra_libraries_annotation.ipynb
+++ b/data/extra_libraries_annotation.ipynb
@@ -32132,7 +32132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BARTtrainH100",
+   "display_name": "MSMetaEnhancer2",
    "language": "python",
    "name": "python3"
   },
