--- a/tokenizer/tokenizer_bbpe_train.ipynb
+++ b/tokenizer/tokenizer_bbpe_train.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "48fd224a",
    "metadata": {},
    "outputs": [],
@@ -34,8 +34,9 @@
     "        choice = np.random.choice(data, size, replace=False)\n",
     "\n",
     "    with open(slice_save_path, 'w') as f:\n",
-    "        for item in choice:\n",
-    "            f.write(item + \" \")\n",
+    "        f.write(choice[0])\n",
+    "        for item in choice[1:]:\n",
+    "            f.write(\" \" + item)\n",
     "\n",
     "random_slice(1000000, data_path, slice_save_dir + \"/1M.txt\")"
    ]
