adding actual notebooks instead of symlinks

--- a/notebooks/3_backward_model_training.ipynb
+++ b/notebooks/3_backward_model_training.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this notebook we take the prepared experimental (NIST) and synthetic (NEIMS-gen, RASSP-gen) datasets and train our final backward model. \n",
     "\n",
-    "The model is an adapted encoder-decoder transformer architecture that takes m/z values and intensities as an input and predicts the SMILES string of a molecule as an output. The architecture is based on Huggingface implementation of the [BART model](https://huggingface.co/docs/transformers/model_doc/bart) and can be found in `{PROJECT_ROOT}/model/modeling_bart_spektro.py`.\n",
+    "The model is an adapted encoder-decoder transformer architecture that takes m/z values and intensities as an input and predicts the SMILES string of a molecule as an output. The architecture is based on Huggingface implementation of the [BART model](https://huggingface.co/docs/transformers/model_doc/bart) and can be found in `{PROJECT_ROOT}/model/modeling_spectus.py`.\n",
     "\n",
     "The training phase is divided into two parts:\n",
     "1. Pretraining on the synthetic dataset (NEIMS-gen, RASSP-gen)\n",
@@ -34,7 +34,7 @@
     "\n",
     "```bash\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/pretrain_final.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/pretrain_final.yaml \\\n",
     "                     --additional-info _final \\\n",
     "                     --additional-tags scratch:rassp1:neims1:final \\\n",
     "                     --wandb-group pretrain\n",
@@ -43,7 +43,7 @@
     "### Finetuning\n",
     "```bash\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_final.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_final.yaml \\\n",
     "                     --checkpoint checkpoints/pretrain/{CHECKPOINT_NAME}/checkpoint-224000 \\\n",
     "                     --additional-info final \\\n",
     "                     --additional-tags final \\\n",
@@ -54,7 +54,7 @@
     "\n",
     "The training process is logged to [Weights & Biases](https://wandb.ai/home). We encourage you to create a profile to track the training. When using `wandb` you can also resume a failed run easily.  \n",
     "\n",
-    "The final model is saved in the `{PROJECT_ROOT}/checkpoints/{wandb-group}/{wandb-run-id}` folder. More information on the `train_bart.py` script arguments can be found by running `python train_bart.py --help`.\n",
+    "The final model is saved in the `{PROJECT_ROOT}/checkpoints/{wandb-group}/{wandb-run-id}` folder. More information on the `train_spectus.py` script arguments can be found by running `python train_spectus.py --help`.\n",
     "\n",
     "If you have more GPUs available, specify the list of the chosen IDs in CUDA_VISIBLE_DEVICES env variable right before the `python` call at the beginning of the line. \n",
     "\n",
@@ -85,14 +85,14 @@
     "```bash\n",
     "# m/z + static positional encoding\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp1_pos_emb.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp1_pos_emb.yaml \\\n",
     "                     --additional-info _exp1_pos_emb \\\n",
     "                     --additional-tags exp1:pos_emb:from_scratch \\\n",
     "                     --wandb-group finetune \n",
     "\n",
     "# m/z + intensity embeddings\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp1_int_emb.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp1_int_emb.yaml \\\n",
     "                     --additional-info exp1_int_emb \\\n",
     "                     --additional-tags exp1:int_emb:from_scratch \\\n",
     "                     --wandb-group finetune \n",
@@ -116,14 +116,14 @@
     "```bash\n",
     "# linear binning 100 bins\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp2_lin_100.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp2_lin_100.yaml \\\n",
     "                     --additional-info _exp2_lin_100 \\\n",
     "                     --additional-tags exp2:lin_100:from_scratch \\\n",
     "                     --wandb-group finetune\n",
     "\n",
     "# linear binning 1000 bins\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp2_lin_1000.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp2_lin_1000.yaml \\\n",
     "                     --additional-info _exp2_lin_1000 \\\n",
     "                     --additional-tags exp2:lin_1000:from_scratch \\\n",
     "                     --wandb-group finetune\n",
@@ -131,28 +131,28 @@
     "# log binning 10 bins, base 2.2\n",
     "# !!! This is the same run as [exp1: m/z + intensity embeddings]\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp2_log_9_2.2.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp2_log_9_2.2.yaml \\\n",
     "                     --additional-info _exp2_log_9_2.2 \\\n",
     "                     --additional-tags exp2:log_9_2.2:from_scratch \\\n",
     "                     --wandb-group finetune\n",
     "\n",
     "# log binning 21 bins, base 1.43\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp2_log_20_1.43.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp2_log_20_1.43.yaml \\\n",
     "                     --additional-info _exp2_log_20_1.43 \\\n",
     "                     --additional-tags exp2:log_20_1.43:from_scratch \\\n",
     "                     --wandb-group finetune\n",
     "\n",
     "# log binning 30 bins, base 1.28\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp2_log_29_1.28.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp2_log_29_1.28.yaml \\\n",
     "                     --additional-info _exp2_log_29_1.28 \\\n",
     "                     --additional-tags exp2:log_29_1.28:from_scratch \\\n",
     "                     --wandb-group finetune\n",
     "\n",
     "# log binning 40 bins, base 1.2\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp2_log_39_1.2.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp2_log_39_1.2.yaml \\\n",
     "                     --additional-info _exp2_log_39_1.2 \\\n",
     "                     --additional-tags exp2:log_39_1.2:from_scratch \\\n",
     "                     --wandb-group finetune\n",
@@ -178,35 +178,35 @@
     "```bash\n",
     "# BBPE with minimal token frequency of 10\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp3_mf10.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp3_mf10.yaml \\\n",
     "                     --additional-info _exp3_mf10 \\\n",
     "                     --additional-tags exp3:mf10:from_scratch \\\n",
     "                     --wandb-group finetune\n",
     "\n",
     "# BBPE with minimal token frequency of 100\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp3_mf100.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp3_mf100.yaml \\\n",
     "                     --additional-info _exp3_mf100 \\\n",
     "                     --additional-tags exp3:mf100:from_scratch \\\n",
     "                     --wandb-group finetune\n",
     "\n",
     "# BBPE with minimal token frequency of 10K\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp3_mf10K.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp3_mf10K.yaml \\\n",
     "                     --additional-info _exp3_mf10K \\\n",
     "                     --additional-tags exp3:mf10K:from_scratch \\\n",
     "                     --wandb-group finetune\n",
     "\n",
     "# BBPE with minimal token frequency of 10M\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp3_mf10M.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp3_mf10M.yaml \\\n",
     "                     --additional-info _exp3_mf10M \\\n",
     "                     --additional-tags exp3:mf10M:from_scratch \\\n",
     "                     --wandb-group finetune\n",
     "\n",
     "# SELFIES tokenizer\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp3_selfies.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp3_selfies.yaml \\\n",
     "                     --additional-info _exp3_selfies \\\n",
     "                     --additional-tags exp3:selfies:from_scratch \\\n",
     "                     --wandb-group finetune\n",
@@ -236,28 +236,28 @@
     "```bash\n",
     "# RASSP-gen only\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/pretrain_exp4_rassp.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/pretrain_exp4_rassp.yaml \\\n",
     "                     --additional-info _exp4_rassp \\\n",
     "                     --additional-tags exp4:rassp:from_scratch \\\n",
     "                     --wandb-group pretrain\n",
     "\n",
     "# NEIMS-gen only\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/pretrain_exp4_neims.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/pretrain_exp4_neims.yaml \\\n",
     "                     --additional-info _exp4_neims \\\n",
     "                     --additional-tags exp4:neims:from_scratch \\\n",
     "                     --wandb-group pretrain\n",
     "\n",
     "# RASSP-gen + NEIMS-gen\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/pretrain_exp4_rassp_neims.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/pretrain_exp4_rassp_neims.yaml \\\n",
     "                     --additional-info _exp4_rassp_neims \\\n",
     "                     --additional-tags exp4:rassp:neims:from_scratch \\\n",
     "                     --wandb-group pretrain\n",
     "\n",
     "# RASSP-gen + NEIMS-gen + NIST\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/pretrain_exp4_rassp_neims_nist.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/pretrain_exp4_rassp_neims_nist.yaml \\\n",
     "                     --additional-info _exp4_rassp_neims_nist \\\n",
     "                     --additional-tags exp4:rassp:neims:nist:from_scratch \\\n",
     "                     --wandb-group pretrain\n",
@@ -268,7 +268,7 @@
     "\n",
     "```bash\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp3_mf10M.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp3_mf10M.yaml \\\n",
     "                     --checkpoint checkpoints/pretrain/{CHECKPOINT_NAME}/checkpoint-112000 \\ # TODO: add correct path\n",
     "                     --additional-info _exp4_{MIXTURE_NAME} \\   # TODO: add correct name\n",
     "                     --additional-tags exp4:from_pretrained \\   # TODO: add correct tags\n",
@@ -289,7 +289,7 @@
     "```bash\n",
     "# one source token for all datasets (we chose <nist> for convenience)\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/pretrain_exp5_one_src_token.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/pretrain_exp5_one_src_token.yaml \\\n",
     "                     --additional-info _exp5_one_src_token \\\n",
     "                     --additional-tags exp5:one_src_token:from_scratch \\\n",
     "                     --wandb-group pretrain\n",
@@ -300,7 +300,7 @@
     "\n",
     "```bash\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp3_mf10M.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp3_mf10M.yaml \\\n",
     "                     --checkpoint checkpoints/pretrain/{CHECKPOINT_NAME}/checkpoint-112000 \\ # TODO: add correct path\n",
     "                     --additional-info _exp5_one_src_token \\ \n",
     "                     --additional-tags exp5:from_pretrained:one_src_token \\\n",
@@ -325,7 +325,7 @@
     "```bash\n",
     "# train fc1 and decoder embedding layers\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp6_72perc_forzen.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp6_72perc_forzen.yaml \\\n",
     "                     --checkpoint checkpoints/pretrain/{NEIMS_RASSP_CHECKPOINT_NAME}/checkpoint-112000 \\ # TODO: add correct path\n",
     "                     --additional-info _exp6_72perc_forzen \\\n",
     "                     --additional-tags exp6:72perc_forzen:from_pretrained \\\n",
@@ -333,7 +333,7 @@
     "\n",
     "# train fc1, cross-attention, decoder self-attention and decoder embedding layers\n",
     "cd {PROJECT_ROOT}\n",
-    "CUDA_VISIBLE_DEVICES=0 python train_bart.py --config-file configs/finetune_exp6_45perc_forzen.yaml \\\n",
+    "CUDA_VISIBLE_DEVICES=0 python train_spectus.py --config-file configs/finetune_exp6_45perc_forzen.yaml \\\n",
     "                     --checkpoint checkpoints/pretrain/{NEIMS_RASSP_CHECKPOINT_NAME}/checkpoint-112000 \\ # TODO: add correct path\n",
     "                     --additional-info _exp6_45perc_forzen \\\n",
     "                     --additional-tags exp6:45perc_forzen:from_pretrained \\\n",
