--- a/notebooks/1_forward_models_training.ipynb
+++ b/notebooks/1_forward_models_training.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,8 @@
    "metadata": {},
    "source": [
     "## NIST splitting\n",
-    "**TODO**\n",
-    "this part is done in the 3rd notebook.. Organize it better i guess."
+    "**NOTE**\n",
+    "this part is done in the 2nd notebook too in case one skips the first one."
    ]
   },
   {
@@ -37,6 +37,37 @@
     "nist_train_path = \"../data/nist/train.msp\"\n",
     "nist_test_path = \"../data/nist/test.msp\"\n",
     "nist_valid_path = \"../data/nist/valid.msp\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'msp2sdf' from 'src.utils' (/home/xhajek9/SpecTUS/notebooks/../src/utils/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# check imports smaz\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m msp2sdf\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrdkit\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Chem\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrdkit\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mChem\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Descriptors\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'msp2sdf' from 'src.utils' (/home/xhajek9/SpecTUS/notebooks/../src/utils/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "# check imports smaz\n",
+    "from src.utils import msp2sdf\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import Descriptors\n",
+    "from tqdm import tqdm\n",
+    "from pathlib import Path\n",
+    "import ast\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "from rdkit.Chem import PandasTools\n",
+    "from utils.spectra_process_utils import smiles_to_inchikey\n"
    ]
   },
   {
@@ -331,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "BARTtrainH100",
    "language": "python",
    "name": "python3"
   },
