--- a/notebooks/1_forward_models_training.ipynb
+++ b/notebooks/1_forward_models_training.ipynb
@@ -214,7 +214,7 @@
      "output_type": "stream",
      "text": [
       "100%|██████████| 231983/231983 [00:01<00:00, 132650.67it/s]\n",
-      "/home/xhajek9/miniconda3/envs/BARTtrainH100/lib/python3.8/site-packages/rdkit/Chem/PandasTools.py:371: SettingWithCopyWarning: \n",
+      "/home/xhajek9/miniconda3/envs/trainSpectus/lib/python3.8/site-packages/rdkit/Chem/PandasTools.py:371: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -362,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BARTtrainH100",
+   "display_name": "trainSpectus",
    "language": "python",
    "name": "python3"
   },
