--- a/notebooks/4_model_evaluation.ipynb
+++ b/notebooks/4_model_evaluation.ipynb
@@ -257,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BARTtrainH100",
+   "display_name": "trainSpectus",
    "language": "python",
    "name": "python3"
   },
