--- a/notebooks/compare_models_interactive.ipynb
+++ b/notebooks/compare_models_interactive.ipynb
@@ -602,7 +602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BARTtrainH100",
+   "display_name": "trainSpectus",
    "language": "python",
    "name": "python3"
   },
