--- a/tokenizer/tokenizer_bbpe_train.ipynb
+++ b/tokenizer/tokenizer_bbpe_train.ipynb
@@ -237,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BARTtrainH100",
+   "display_name": "trainSpectus",
    "language": "python",
    "name": "python3"
   },
