finish the notebooks

--- a/notebooks/extra_libraries_annotation.ipynb
+++ b/notebooks/extra_libraries_annotation.ipynb
@@ -8,12 +8,12 @@
     "\n",
     "The libraries were downloaded from https://littlemsandsailing.com/2023/10/free-ei-and-msms-spectra-in-nist-format/ and converted to SDF/MSP with the [LIB2NIST](https://chemdata.nist.gov/dokuwiki/doku.php?id=chemdata:nistlibs) tool.\n",
     "\n",
-    "In this notebook we annotate the spectra with SMILES strings. This information is taken from compound libraries, such as PubChem or IDSM. In order to do that we need a tool that conveniently communicates with the libraries - [MSMetaEnhancer](https://github.com/RECETOX/MSMetaEnhancer/tree/main). In the MSMetaEnhancer repository you'll find the installation instructions and instructions for setting up environment needed to run this notebook in. "
+    "In this notebook we annotate the spectra with SMILES strings. This information is taken from compound libraries, such as PubChem or IDSM. In order to do that we need a tool that conveniently communicates with the libraries - [MSMetaEnhancer](https://github.com/RECETOX/MSMetaEnhancer/tree/main). In the MSMetaEnhancer repository you'll find the installation instructions and instructions for setting up environment needed to run this notebook in. (Or you can use our MSMetaEnhancer.yaml file to create a conda environment that worked for us.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
