--- a/demo/notebook/demo.ipynb
+++ b/demo/notebook/demo.ipynb
@@ -11,18 +11,12 @@
     "from matchms.importing import load_from_msp\n",
     "from matchms import set_matchms_logger_level\n",
     "import pandas as pd\n",
+    "from rdkit import Chem\n",
+    "\n",
     "set_matchms_logger_level(\"ERROR\")\n",
     "\n",
-    "api = 'http://localhost:5000/predictions'"
+    "api = 'https://spectus-demo.dyn.cloud.e-infra.cz/predictions'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3905c0eb-ab0a-48eb-8837-815d5a825a6f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -33,7 +27,11 @@
    "source": [
     "msp_file_path = \"SWGDRUG_100.msp\"\n",
     "msp = load_from_msp(msp_file_path)\n",
-    "mz,intensity = zip(*[ (list(map(float,s.peaks.mz)), list(map(float,s.peaks.intensities)))  for s in msp ])\n",
+    "mz,intensity,smiles = zip(*[ (\n",
+    "    list(map(float,s.peaks.mz)),\n",
+    "    list(map(float,s.peaks.intensities)),\n",
+    "    s.metadata.get('canonical_smiles'))\n",
+    "    for s in msp ])\n",
     "len(mz)"
    ]
   },
@@ -45,7 +43,7 @@
    "outputs": [],
    "source": [
     "topk = 20\n",
-    "idx = 1\n",
+    "idx = 7\n",
     "\n",
     "response_post = requests.post(api, json={\n",
     "    \"mz\": mz[idx],\n",
@@ -102,7 +100,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e26c0ce-d0a6-4a43-8009-f443bd2bf921",
+   "id": "17466c8b-8b06-41f7-829f-f520d83216da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ground_truth = Chem.MolFromSmiles(smiles[idx])\n",
+    "ground_truth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dd54ebc-b43f-4d45-b0c4-109b87177d19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 1\n",
+    "Chem.MolFromSmiles(r.loc[n].SMILES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b4e9e26-5b9a-412a-974a-a653bf7b3b1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a48d9a2-1f93-4cb4-b6e4-d9fe6e87ebd5",
    "metadata": {},
    "outputs": [],
    "source": []
